# ksc-rs

./: .gitmodules  Cargo.toml  Contexts.md  LICENSE  ksc.bat  readme.md
.github/workflows/: build_and_test.yml
cli/: Cargo.toml
cli/src/: main.rs
ksc-java/: Cargo.toml  builtin.ksy
ksc-java/src/: lib.rs
src/: common.rs  error.rs  expressions.rs  identifiers.rs  lib.rs  model.rs  parser.rs
src/model/: contexts.rs  expressions.rs  mod.rs  name.rs
src/parser/: expressions.rs  mod.rs
