[workspace]
members = [
  ".",
  "ksc-java",
]

[workspace.dependencies]
pretty_assertions = "1.0"

[package]
name = "ksc"
version = "0.1.0"
authors = ["Mingun <Alexander_Sergey@mail.ru>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Mingun/ksc-rs"
description = "Alternative [Kaitai Struct](https://kaitai.io) compiler, written in pure Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4"
indexmap = { version = "2.0", features = ["serde"] }
lazy_static = "1.4"
peg = "0.8"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
# When update version check `impl Hash for Scalar`, it should be the same as
# `impl Hash for serde_yml::Value` for consistency
serde_yml = "0.0.11"

[dev-dependencies]
heck = "0.4"
pretty_assertions.workspace = true
test-generator = "0.3"

[features]
# When enabled, the compiler will preserve compatibility with the original compiler
# (https://github.com/kaitai-io/kaitai_struct_compiler), otherwise in some cases it
# will work differently. See readme.md for full list of differencies
compatible = []
