[package]
name = "ksc"
version = "0.1.0"
authors = ["Mingun <Alexander_Sergey@mail.ru>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Mingun/ksc-rs"
description = "Alternative [Kaitai Struct](https://kaitai.io) compiler, written in pure Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.7", features = ["serde-1"] }
lazy_static = "1.4"
ordered-float = "2.8"
peg = "0.7"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
pretty_assertions = "1.0"
test-generator = "0.3"
